# obiwan

./: .gitignore  README.md  flake.nix
.github/: renovate.json
.github/workflows/: ci.yml
nix/: atftp-debug.patch  module.nix  tests.nix
nix/tests/: can-fetch-files.nix  default.nix
ws/: Cargo.toml
ws/obiwan/: Cargo.toml
ws/obiwan/src/: main.rs  path.rs  simple_fs.rs  simple_proto.rs  tftp.rs  tftp_proto.rs
