[workspace]
resolver = "2"

members = [
    # Libraries
    # ... none yet ...

    # Binaries
    "obiwan",
]

[workspace.package]
version = "0.1.0"
authors = ["Julian Stecklina <js@alien8.de>"]
edition = "2021"
license = "AGPL-3.0-or-later"

[profile.release]
lto = true
codegen-units = 1
strip = true
