[package]
name = "obiwan"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
log = "0.4.20"
anyhow = "1.0.80"
clap = { version = "4.5.1", default-features = false, features = [ "std", "help", "usage", "derive" ] }
simplelog = { version = "0.12.1", default-features = false }
nix = { version = "0.28.0", features = [ "user", "fs" ] }
tokio = { version = "1.36.0", default-features = false, features = [ "fs", "io-util", "net", "rt", "sync", "time", "macros" ] }
binrw = "0.13.3"
async-trait = "0.1.77"
